--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
         <script src="dependencias/angular-route/angular-route.min.js" type="text/javascript"></script>
         <script src="js/Application.js" type="text/javascript"></script>
         <script type="text/javascript" src="js/LeilaoController.js"></script>
+         <script type="text/javascript" src="js/PessoaController.js"></script>
         <script type="text/javascript" src="js/jquery-1.2.6.pack.js"></script>
         <script type="text/javascript" src="js/mask.js"></script>
 
