--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,8 @@
         <script type="text/javascript" src="js/PessoaController.js"></script>
         <script type="text/javascript" src="js/jquery-1.2.6.pack.js"></script>
         <script type="text/javascript" src="js/mask.js"></script>
-
+        <script type="text/javascript" src="js/ngMask.min.js"></script>
+        
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="dependencias/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/estilos.css">
