--- a/client/index.html
+++ b/client/index.html
@@ -65,7 +65,7 @@
                 <nav class="navbar-collapse collapse">
                     <ul class="nav nav-justified">
                     <li>
-                        <a href="#/" id="btnTXT"  ><i class="fa fa-home" style="font-size:24px;color:orange;" aria-hidden="true"></i>  Home</a>
+                        <a href="#/" id="btnTXT"  ><img src="img/home.svg" id="menuIcon">  Home</a>
                     </li>
                     <li ng-hide="!showMenu">
                         <a href="#/perfil" id="btnTXT"><img src="img/user.svg" id="menuIcon">  Perfil</a>
